[package]
name = "curve_3pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
